# MADER-FastAPI

./: .coverage  .env  Mader project Commands.txt  README.md  pyproject.toml
mader_project/: app.py  database.py  dependencies.py  models.py  schemas.py  security.py  user_utils.py
mader_project/functions/: func_books_utils.py  func_novelists_utils.py  func_users_utils.py  normalize_text.py
mader_project/routes/: auth.py  books.py  novelists.py  users.py
migrations/: env.py
migrations/versions/: 3abaad263535_add_status_to_user_model.py  93db94c90097_correction_in_the_relationship_of_books_.py  ab6afa01e231_ajusts_in_books_model.py  e8959f899ee1_run_initial_migration.py
tests/: conftest.py  test_app.py  test_auth.py  test_books.py  test_normalize.py  test_novelists.py  test_security.py  test_users.py
