[project]
name = "mader-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Moura",email = "leonardo.moura@eldorado.org.br"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
